# Use-Case-Generator

./: README.md
backend/: main.py  pyproject.toml
frontend/: package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.jsx  main.jsx
